8040102: Remove all references to Unsafe and definition of anonymous clases from the code
As the catch combinator optimization is now part of java.lang.invoke we don't need to put our own in the boot class path in any configuration anymore. Furthermore, with the completion of the array performance subtask of optimistic typing, we can remove the experimental (commented out) Unsafe accessors in the ArrayData classes

Reviewed-by: attila, jlaskey